[package]
name = "based16"
version = "0.2.2"
edition = "2018"
description = "BASE-16(HEX) implementation for chads"
readme = "README.md"
repository = "https://github.com/DoumanAsh/based16"
license = "BSL-1.0"
keywords = ["base16", "hex"]
categories = ["algorithms", "no-std::no-alloc"]
include = [
    "**/*.rs",
    "Cargo.toml",
    "README.md",
    "LICENSE",
]

[features]
alloc = []

[package.metadata.docs.rs]
features = ["alloc"]
